<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/green"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Local alarm"
        android:textColor="#ffffff"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="16dp"
        android:textSize="28dp"
        android:layout_centerHorizontal="true"/>
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/arrow_down"
        android:layout_alignParentRight="true"
        android:tint="#ffffff"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        />
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/title"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="#ffffff"/>
    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_below="@id/divider"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        >
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert_active_for"
                android:textColor="#ffffff"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_gravity="center_horizontal"
                android:textColor="#ffffff"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />
            <Button
                android:id="@+id/button1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_new_alert"
                android:layout_marginTop="15dp"
                android:textColor="@color/colors"
                android:background="@drawable/button"
                />
            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@android:color/white"
                android:src="@drawable/ic_add2"
                android:text="@string/cancel"
                android:textColor="@color/colors"
                android:background="@drawable/button"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                />
            <CheckBox
                android:id="@+id/gpsbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="false"
                android:text="@string/location_avail"
                android:checked="false"
                android:textColor="#ffffff"
                />
            <CheckBox
                android:id="@+id/intbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="false"
                android:text="@string/int_avail"
                android:textColor="#ffffff"
                />
            <Button
                android:id="@+id/loc"
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickStartService"
                android:text="@string/enable_loc"
                android:background="@drawable/button"
                android:textColor="@color/colors"
                android:layout_marginLeft="10pt"
                android:layout_marginRight="10pt"
                />
            <Button
                android:id="@+id/data"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/enable_loc"
                android:background="@drawable/button"
                android:textColor="@color/colors"
                android:layout_marginTop="10dp"
                />
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@android:color/white"
                android:src="@android:drawable/ic_input_add"
                android:layout_marginTop="10dp"
                app:rippleColor="#ffffff"
                android:layout_gravity="center_horizontal" />
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
