
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Set alarm"
        android:textColor="#ffffff"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="16dp"
        android:textSize="28dp"
        android:layout_centerHorizontal="true"/>
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/title"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="#ffffff"
        />
    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/green"
        android:layout_below="@id/divider"
        >
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Central"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingRight="16dp"
        android:paddingLeft="10pt"
        android:animateLayoutChanges="true"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_line"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
        <Spinner
            android:id="@+id/spinnerRegion"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:entries="@array/Zone"
            android:background="@drawable/button"
            android:textAlignment="center"
            android:textColor="@color/colors"
            android:scrollbarStyle="outsideOverlay"
            android:visibility="visible"
            />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_station"
            android:textColor="#ffffff"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
        <Spinner
            android:id="@+id/spinnerCity"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:textColor="@color/colors"
            android:visibility="invisible"
            android:textAlignment="center"
            />
        <EditText
            android:id="@+id/et1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10pt"
            android:hint="@string/reminder_text"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textColorHint="#dcdada"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5pt"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="comingsoon"
            android:text="@string/pick_from_map"
            android:background="@drawable/button"
            android:textColor="@color/colors"
            android:layout_marginTop="5pt"
            android:layout_gravity="center_horizontal"
            android:elevation="5dp"
            />
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_add"
            android:layout_marginTop="10dp"
            app:rippleColor="#ffffff"
            android:tint="@android:color/white"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            />
    </LinearLayout>



</ScrollView>
    </RelativeLayout>